--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,10 +10,10 @@ Authors@R:
           person("Kaue", "de Sousa", 
           email = "kaue.desousa@inn.no", role = c("aut"),
           comment = c(ORCID = "0000-0002-7571-7845")))
-Description: What the package does (one paragraph).
+Description: Extracts data from locally stored AgERA5 dataset.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-Imports:  raster
+Imports:  raster, dplyr
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.0
