--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,6 +14,6 @@ Description: Extracts data from locally stored AgERA5 dataset.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-Imports: raster, dplyr, terra, stringr
+Imports: raster, dplyr, terra, stringr, lubridate
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
