--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,9 @@
 export(get_prec.data_point)
 export(get_prec.dataset)
 export(get_prec.period)
+export(get_srf.data_point)
+export(get_srf.dataset)
+export(get_srf.period)
 export(get_temp.data_point)
 export(get_temp.dataset)
 export(get_temp.period)
