--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: agera5
-Title: Data extraction from AgERA5 data
-Version: 0.0.0.9006
+Title: R tools for AgERA5 data
+Version: 0.0.0.9007
 Authors@R:
           c(person(given = "David",
           family = "Brown",
@@ -10,10 +10,10 @@ Authors@R:
           person("Kaue", "de Sousa", 
           email = "kaue.desousa@inn.no", role = c("aut"),
           comment = c(ORCID = "0000-0002-7571-7845")))
-Description: Extracts data from locally stored AgERA5 dataset.
+Description: R tools for download and extract data from "Agrometeorological indicators from 1979 to present derived from reanalysis"
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-Imports: raster, dplyr, terra, stringr, lubridate
+Imports: terra, reticulate
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.1
+RoxygenNote: 7.1.2
