--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,9 +11,14 @@ Authors@R:
           email = "kaue.desousa@inn.no", role = c("aut"),
           comment = c(ORCID = "0000-0002-7571-7845")))
 Description: R tools for download and extract data from "Agrometeorological indicators from 1979 to present derived from reanalysis"
-License: MIT + file LICENSE
+License: Apache-2.0 + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Imports: terra, reticulate
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
+Suggests: 
+    rmarkdown,
+    knitr
+VignetteBuilder: knitr
+URL: https://agrdatasci.github.io/agera5/
