--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,19 +2,18 @@
 
 S3method(get_prec,data_point)
 S3method(get_prec,dataset)
-S3method(get_prec,period)
-S3method(get_rhum,data_point)
-S3method(get_rhum,dataset)
-S3method(get_rhum,period)
-S3method(get_temp,data_point)
-S3method(get_temp,dataset)
-S3method(get_temp,period)
+S3method(get_prec,time_series)
 export(download_agera5)
+export(get_rhum.data_point)
+export(get_rhum.dataset)
+export(get_rhum.time_series)
 export(get_srf.data_point)
 export(get_srf.dataset)
-export(get_srf.period)
+export(get_srf.time_series)
 export(get_stat_code)
-export(get_temp)
+export(get_temp.data_point)
+export(get_temp.dataset)
+export(get_temp.time_series)
 export(get_temp_stats)
 export(get_temp_stats_cds)
 import(reticulate)
