--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,4 +5,6 @@ S3method(ag5_extract,numeric)
 export(ag5_download)
 export(ag5_extract)
 importFrom(terra,extract)
+importFrom(utils,setTxtProgressBar)
+importFrom(utils,txtProgressBar)
 importFrom(utils,unzip)
