change package name

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: agera5
+Package: ag5Tools
 Title: Toolbox for Downloading and Extracting Copernicus AgERA5 Data 
 Version: 0.0.0.9007
 Authors@R:
