--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,11 @@ S3method(ag5_extract,data.frame)
 S3method(ag5_extract,numeric)
 export(ag5_download)
 export(ag5_extract)
+importFrom(doSNOW,registerDoSNOW)
+importFrom(foreach,"%dopar%")
+importFrom(foreach,foreach)
+importFrom(parallel,makeCluster)
+importFrom(parallel,stopCluster)
 importFrom(terra,extract)
 importFrom(utils,setTxtProgressBar)
 importFrom(utils,txtProgressBar)
