Update with CRAN version 0.0.2

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,7 @@ S3method(ag5_extract,data.frame)
 S3method(ag5_extract,numeric)
 export(ag5_download)
 export(ag5_extract)
-importFrom(doSNOW,registerDoSNOW)
+importFrom(doParallel,registerDoParallel)
 importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
 importFrom(parallel,makeCluster)
