--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,7 @@ Authors@R: c(person(given = "David",
 Description: Tools for downloading and extracting data from the Copernicus "Agrometeorological indicators 
   from 1979 to present derived from reanalysis"
   <https://cds.climate.copernicus.eu/cdsapp#!/dataset/sis-agrometeorological-indicators?tab=overview> (AgERA5).
-Config/reticulate:
+Config/reticulate/autoconfigure:
   list(
     packages = list(
       list(package = "cdsapi",  pip = TRUE)
@@ -26,7 +26,7 @@ Depends: R (>= 3.5.0)
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-Imports: terra, reticulate, fs, doSNOW, foreach
+Imports: terra, reticulate, fs, doParallel, foreach
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Suggests: 
